# cppweb

./: .gitignore  README.md  setup
cppbox/: Dockerfile
goke/: CMakeLists.txt  global.h  goke_ws.code-workspace  main.cpp  package-lock.json  package.json  settings  test.rest  tsconfig.json  webpack.config.js  xtsconfig.json
goke/apiControllers/: contactsApiController.h
goke/data/: repository.h
goke/entities/: contact.h
goke/includes/: crow_all.h  web.h
goke/src/: db.h  global.h  goke.db  main.cpp  test.db
goke/src/apiControllers/: contactsApiController.h
goke/src/client/: dashboard.html  index.html  manifest.json  sw.js  sw.published.js  sw_assets.js
goke/src/client/css/: app.css
goke/src/client/js/: bundle.js  sw_index.js
goke/src/client/scss/: main.scss
goke/src/client/static/ts/: app.ts
goke/src/client/static/ts/views/: Dashboard.ts
goke/src/client/templates/: about.html  app.html  manifest.json
goke/src/client/templates/contacts/: index.html
goke/src/client/ts/: app.ts  contact-index.ts  index.ts
goke/src/client/ts/views/: AbstractView.ts  Dashboard.ts  PostView.html  PostView.ts  Posts.ts  Settings.ts
goke/src/data/: repository.h
goke/src/middlewares/: middlewares.h
goke/src/server/: main.cpp  manifest.json  sw.js  sw.published.js  sw_assets.js  sw_index.js  test.db
goke/src/server/apis/: contactsApiController.h
goke/src/server/app_data/: goke.db
goke/src/server/data/: repository.h
goke/src/server/entities/: contact.h
goke/src/server/include/: crow_all.h  db.h  global.h  web.h
goke/src/server/middlewares/: middlewares.h
goke/src/server/static/css/: app.css
goke/src/server/static/js/: app.js  app.js.map  contact.js.map  index.js  index.js.map  sw_index.js
goke/src/server/static/js/views/: AbstractView.js  AbstractView.js.map  Dashboard.js  Dashboard.js.map  Posts.js  Posts.js.map  Settings.js  Settings.js.map
goke/src/server/templates/: app.html  dashboard.html  index.html
goke/src/server/templates/contacts/: index.html
goke/src/static/scripts/: contact.js  contact.js.map  index.js  index.js.map
goke/src/templates/contacts/: index.html
goke/src/tscripts/: contact.ts  index.ts
goke/templates/: index.html
goke/templates/contacts/: index.html
goke/templates/person/: index.html
gokesite/: CMakeLists.txt  contact_controller.h  main.cpp  sqlite_adapter.h
gokesite/app_data/: test.db
gokesite/data/: sqlite_adapter.h
gokesite/include/: crow_all.h
gokesite/include/headeronly_src/: README  sqlite3pp.h  sqlite3pp.ipp
gokesite/libs/: crow_all.h
gokesite/public/: contacts.html
gokesite/src/: main.cpp
gokesite/src/controllers/: ContactController.h
gokesite/src/data/: sqlite_adapter.h
gokesite/src/entities/: Contact.h
gokesite/src/public/: about.html  chat.html  contact.html  contactsuseapi.html  index.html
gokesite/src/public/scripts/: app.js  contact.js  websocket.js
gokesite/tools/: test.rest
gokesitew/: CMakeLists.txt  main.cpp
gokesitew/app_data/: test.db
gokesitew/data/: sqlite_adapter.h
gokesitew/libs/: crow_all.h
gokesitew/public/: contact.html  index.html
gokesitew/src/: main.cpp
gokesitew/src/controllers/: ContactController.h
gokesitew/src/data/: sqlite_adapter.h
gokesitew/src/entities/: Contact.h
gokesitew/src/include/: crow_all.h
gokesitew/src/include/headeronly_src/: sqlite3pp.h  sqlite3ppext.h  sqlite3ppext.ipp
gokesitew/src/public/: about.html  contacts.html  index.html
gokesitew/src/public/scripts/: app.js
gokesitew/src/tools/: test.rest
hello_crow/: CMakeLists.txt  main.cpp
